// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Load Files Should convert complex sql account-levelisation.update.query.sql: account-levelisation.update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "isAccepted",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "boolean",
          "type": "Boolean",
        },
      },
    },
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "isAccepted",
      "type": Object {
        "comment": null,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisation.upsert.query.sql: account-levelisation.upsert.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "levelisationId",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "start",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisations.query.sql: account-levelisations.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "character varying",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "resolvedPostlev",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "postgresType": "bool",
              "type": "Boolean",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "items": Array [
                Object {
                  "literal": "Pending",
                  "postgresType": "text",
                  "type": "String",
                },
                Object {
                  "literal": "Done",
                  "postgresType": "text",
                  "type": "String",
                },
              ],
              "postgresType": "account_levelisation_state",
              "type": "UnionConstant",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "items": Array [
                Object {
                  "literal": "Pending",
                  "postgresType": "text",
                  "type": "String",
                },
                Object {
                  "literal": "Done",
                  "postgresType": "text",
                  "type": "String",
                },
              ],
              "nullable": false,
              "postgresType": "account_levelisation_state",
              "type": "UnionConstant",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "postgresType": "int4",
              "type": "Number",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "integer",
              "type": "Number",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "ids",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "postgresType": "int4",
            "type": "Number",
          },
          "postgresType": "int4[]",
          "type": "ArrayConstant",
        },
      },
    },
    Object {
      "name": "sortField",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "totalPayment",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "vatPayment",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "generationPayment",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "exportPayment",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "generationEnergy",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "exportEnergy",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "cfrFitId",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "state",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "isAccepted",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "error",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "exportType",
              "postgresType": "text",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "sortOrder",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "DESC",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "ASC",
              "postgresType": "text",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "limit",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "offset",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "levelisationId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "installationId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Done",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "account_levelisation_state",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "isAccepted",
      "type": Object {
        "comment": null,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
    Object {
      "name": "generationStartReadOn",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "generationStartReadValue",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "generationEndReadOn",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "generationEndReadValue",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "generationPercentageSplit",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "generationPayment",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "generationEnergy",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "exportStartReadOn",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "exportStartReadValue",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "exportEndReadOn",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "exportEndReadValue",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "exportPercentageSplit",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "exportPayment",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "exportEnergy",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "exportType",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Deemed",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Deemed",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Metered Export",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Metered Export",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Off Grid",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Off Grid",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "PPA",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "PPA",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": true,
        "postgresType": "installation_export_type",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "technologyType",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "PV",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "H",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "W",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "AD",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "CHP",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": true,
        "postgresType": "installation_technology_types",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "totalPayment",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "vatPayment",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "generationPeriods",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "jsonb",
        "type": "Json",
      },
    },
    Object {
      "name": "exportPeriods",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "jsonb",
        "type": "Json",
      },
    },
    Object {
      "name": "errorCode",
      "type": Object {
        "nullable": true,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "errorParams",
      "type": Object {
        "nullable": true,
        "postgresType": "json",
        "type": "Json",
      },
    },
    Object {
      "name": "cfrFitId",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "resolvedPostlevId",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "isBacsPaymentsSent",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
    Object {
      "name": "isChequePaymentsSent",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisations-bulk-close-accounts.query.sql: account-levelisations-bulk-close-accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "postgresType": "int4",
            "type": "Number",
          },
          "postgresType": "int4[]",
          "type": "ArrayConstant",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql account-levelisations-set-bulk-update.query.sql: account-levelisations-set-bulk-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "postgresType": "int4",
            "type": "Number",
          },
          "postgresType": "int4[]",
          "type": "ArrayConstant",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.list.query.sql: accounts.list.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "postgresType": "varchar",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "character varying",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "ids",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "postgresType": "int4",
            "type": "Number",
          },
          "postgresType": "int4[]",
          "type": "ArrayConstant",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "total",
      "type": Object {
        "postgresType": "int4",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.query.sql: accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": undefined,
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "postgresType": "varchar",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "nullable": true,
              "postgresType": "character varying",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "character varying",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "ids",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "postgresType": "int4",
            "type": "Number",
          },
          "postgresType": "int4[]",
          "type": "ArrayConstant",
        },
      },
    },
    Object {
      "name": "limit",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "offset",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Active",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Pending",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Dispute",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Closed",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "account_state",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "firstName",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "lastName",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "email",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "address",
      "type": Object {
        "comment": undefined,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "fitIds",
      "type": Object {
        "items": Object {
          "comment": null,
          "postgresType": "character varying",
          "type": "String",
        },
        "postgresType": "character varying[]",
        "type": "ArrayConstant",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql accounts.sql: accounts.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [],
}
`;

exports[`Load Files Should convert complex sql active-meters-with-last-read.query.sql: active-meters-with-last-read.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "intervalStart",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "date",
              "type": "Date",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "date",
              "type": "Date",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "intervalEnd",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "postgresType": "int4",
              "type": "Number",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "integer",
              "type": "Number",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "make",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "model",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Export",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Generation",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "meter_types",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "currentPeriodRead",
      "type": Object {
        "nullable": true,
        "postgresType": "json",
        "type": "OptionalConstant",
        "value": Object {
          "items": Array [
            Object {
              "name": "id",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "value",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "dateOn",
              "type": Object {
                "comment": null,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "submittedAt",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "reason",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "character varying",
                "type": "String",
              },
            },
            Object {
              "name": "type",
              "type": Object {
                "comment": null,
                "items": Array [
                  Object {
                    "literal": "Opening",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Closing",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Quarterly",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Meter Verification",
                    "postgresType": "text",
                    "type": "String",
                  },
                ],
                "nullable": false,
                "postgresType": "meter_reads_types",
                "type": "UnionConstant",
              },
            },
          ],
          "postgresType": "json",
          "type": "ObjectLiteralConstant",
        },
      },
    },
    Object {
      "name": "previousPeriodRead",
      "type": Object {
        "nullable": true,
        "postgresType": "json",
        "type": "OptionalConstant",
        "value": Object {
          "items": Array [
            Object {
              "name": "id",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "value",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "dateOn",
              "type": Object {
                "comment": null,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "submittedAt",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "reason",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "character varying",
                "type": "String",
              },
            },
            Object {
              "name": "type",
              "type": Object {
                "comment": null,
                "items": Array [
                  Object {
                    "literal": "Opening",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Closing",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Quarterly",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Meter Verification",
                    "postgresType": "text",
                    "type": "String",
                  },
                ],
                "nullable": false,
                "postgresType": "meter_reads_types",
                "type": "UnionConstant",
              },
            },
          ],
          "postgresType": "json",
          "type": "ObjectLiteralConstant",
        },
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql active-meters-wth-reads.query.sql: active-meters-wth-reads.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "intervalStart",
      "type": Object {
        "items": Array [
          Object {
            "nullable": false,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "date",
              "type": "Date",
            },
          },
          Object {
            "nullable": false,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "date",
              "type": "Date",
            },
          },
        ],
        "nullable": false,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "intervalEnd",
      "type": Object {
        "nullable": false,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
    Object {
      "name": "accountId",
      "type": Object {
        "nullable": false,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "postgresType": "int4",
              "type": "Number",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "integer",
              "type": "Number",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "make",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "model",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Export",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Generation",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "meter_types",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "currentPeriodRead",
      "type": Object {
        "nullable": true,
        "postgresType": "json",
        "type": "OptionalConstant",
        "value": Object {
          "items": Array [
            Object {
              "name": "id",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "value",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "dateOn",
              "type": Object {
                "comment": null,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "submittedAt",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "reason",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "character varying",
                "type": "String",
              },
            },
            Object {
              "name": "type",
              "type": Object {
                "comment": null,
                "items": Array [
                  Object {
                    "literal": "Opening",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Closing",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Quarterly",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Meter Verification",
                    "postgresType": "text",
                    "type": "String",
                  },
                ],
                "nullable": false,
                "postgresType": "meter_reads_types",
                "type": "UnionConstant",
              },
            },
          ],
          "postgresType": "json",
          "type": "ObjectLiteralConstant",
        },
      },
    },
    Object {
      "name": "previousPeriodRead",
      "type": Object {
        "nullable": true,
        "postgresType": "json",
        "type": "OptionalConstant",
        "value": Object {
          "items": Array [
            Object {
              "name": "id",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "value",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "dateOn",
              "type": Object {
                "comment": null,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "submittedAt",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "date",
                "type": "Date",
              },
            },
            Object {
              "name": "reason",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "character varying",
                "type": "String",
              },
            },
            Object {
              "name": "type",
              "type": Object {
                "comment": null,
                "items": Array [
                  Object {
                    "literal": "Opening",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Closing",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Quarterly",
                    "postgresType": "text",
                    "type": "String",
                  },
                  Object {
                    "literal": "Meter Verification",
                    "postgresType": "text",
                    "type": "String",
                  },
                ],
                "nullable": false,
                "postgresType": "meter_reads_types",
                "type": "UnionConstant",
              },
            },
          ],
          "postgresType": "json",
          "type": "ObjectLiteralConstant",
        },
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql active-reads.view.sql: active-reads.view.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "meter_id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "date_on",
      "type": Object {
        "comment": null,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Opening",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Closing",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Quarterly",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Meter Verification",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "meter_reads_types",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "created_at",
      "type": Object {
        "comment": null,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "updated_at",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "source_system_id",
      "type": Object {
        "comment": "sql-fit: MeterReading.MeterReadingId",
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "checked",
      "type": Object {
        "comment": null,
        "postgresType": "boolean",
        "type": "Boolean",
      },
    },
    Object {
      "name": "deleted_at",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "submitted_at",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "history",
      "type": Object {
        "comment": null,
        "postgresType": "jsonb",
        "type": "Json",
      },
    },
    Object {
      "name": "overwritten_at",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql bacs.query.sql: bacs.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "quarter",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "character varying",
          "type": "String",
        },
      },
    },
    Object {
      "name": "perPage",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "text",
          "type": "String",
        },
      },
    },
    Object {
      "name": "offset",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "text",
          "type": "String",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "fitId",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "name",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "amount",
      "type": Object {
        "comment": null,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "quarter",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "bankDetails",
      "type": Object {
        "comment": undefined,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "addressLine1",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "addressLine2",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "addressLine3",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "postcode",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql contracts.sql: contracts.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [],
}
`;

exports[`Load Files Should convert complex sql cte.query.sql: cte.query.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [
    Object {
      "name": "region",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "product",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "product_units",
      "type": Object {
        "comment": undefined,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
    Object {
      "name": "product_sales",
      "type": Object {
        "comment": undefined,
        "postgresType": "bigint",
        "type": "BigInt",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql delete-accounts.query.sql: delete-accounts.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "type",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "items": Array [
            Object {
              "literal": "FIT",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "SEG",
              "postgresType": "text",
              "type": "String",
            },
          ],
          "nullable": false,
          "postgresType": "contract_scheme_types",
          "type": "UnionConstant",
        },
      },
    },
    Object {
      "name": "state",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "items": Array [
            Object {
              "literal": "Active",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "Pending",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "Dispute",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "Closed",
              "postgresType": "text",
              "type": "String",
            },
          ],
          "nullable": false,
          "postgresType": "account_state",
          "type": "UnionConstant",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "customerId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql generation-read-data.query.sql: generation-read-data.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "installationId",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "exportDateOn",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "dateOn",
      "type": Object {
        "comment": null,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql insert.process.query.sql: insert.process.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "items",
      "type": Object {
        "items": Object {
          "items": Array [
            Object {
              "name": "processId",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
            Object {
              "name": "idempotencyKey",
              "type": Object {
                "comment": null,
                "nullable": true,
                "postgresType": "character varying",
                "type": "String",
              },
            },
            Object {
              "name": "data",
              "type": Object {
                "comment": null,
                "postgresType": "jsonb",
                "type": "Json",
              },
            },
            Object {
              "name": "accountId",
              "type": Object {
                "comment": null,
                "postgresType": "integer",
                "type": "Number",
              },
            },
          ],
          "nullable": false,
          "postgresType": "json",
          "type": "ObjectLiteralConstant",
        },
        "postgresType": "anyarray",
        "type": "ArrayConstant",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "data",
      "type": Object {
        "comment": null,
        "postgresType": "jsonb",
        "type": "Json",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql installation-meter-update.query.sql: installation-meter-update.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "removalDate",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [],
}
`;

exports[`Load Files Should convert complex sql installations.sql: installations.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [],
}
`;

exports[`Load Files Should convert complex sql levelisations.list.query.sql: levelisations.list.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "q",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "comment": null,
              "postgresType": "character varying",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "ids",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "postgresType": "int4",
            "type": "Number",
          },
          "postgresType": "int4[]",
          "type": "ArrayConstant",
        },
      },
    },
    Object {
      "name": "sortField",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "literal": "quarter",
          "postgresType": "text",
          "type": "String",
        },
      },
    },
    Object {
      "name": "sortOrder",
      "type": Object {
        "items": Array [
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "DESC",
              "postgresType": "text",
              "type": "String",
            },
          },
          Object {
            "nullable": true,
            "postgresType": "any",
            "type": "OptionalConstant",
            "value": Object {
              "literal": "ASC",
              "postgresType": "text",
              "type": "String",
            },
          },
        ],
        "nullable": true,
        "postgresType": "any",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "limit",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "offset",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "quarter",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "comment": null,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "endOn",
      "type": Object {
        "comment": null,
        "postgresType": "date",
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql meter-reads.sql: meter-reads.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [],
}
`;

exports[`Load Files Should convert complex sql process-batch.query.sql: process-batch.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "fitIds",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "items": Object {
            "comment": null,
            "nullable": true,
            "postgresType": "character varying",
            "type": "String",
          },
          "postgresType": "character varying[]",
          "type": "ArrayConstant",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "cfrFiTId",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "email",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "contactName",
      "type": Object {
        "comment": undefined,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "company",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "line1",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "line2",
      "type": Object {
        "comment": undefined,
        "postgresType": "text",
        "type": "String",
      },
    },
    Object {
      "name": "town",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "postcode",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "county",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "country",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql rates-by-tarrif-ids.query.sql: rates-by-tarrif-ids.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "ids",
      "type": Object {
        "items": Object {
          "nullable": true,
          "postgresType": "any",
          "type": "OptionalConstant",
          "value": Object {
            "items": Object {
              "comment": null,
              "postgresType": "integer",
              "type": "Number",
            },
            "postgresType": "integer[]",
            "type": "ArrayConstant",
          },
        },
        "postgresType": "anyarray",
        "type": "ArrayConstant",
      },
    },
  ],
  "results": Array [
    Object {
      "name": "tariffId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "rate",
      "type": Object {
        "comment": null,
        "postgresType": "numeric",
        "type": "Number",
      },
    },
    Object {
      "name": "startOn",
      "type": Object {
        "comment": null,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "tariffCode",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "tariffType",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Export",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Generation",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "SEG",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "tariff_types",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "endOn",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql read-create.query.sql: read-create.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "meterId",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "character varying",
          "type": "String",
        },
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "items": Array [
            Object {
              "literal": "Opening",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "Closing",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "Quarterly",
              "postgresType": "text",
              "type": "String",
            },
            Object {
              "literal": "Meter Verification",
              "postgresType": "text",
              "type": "String",
            },
          ],
          "nullable": false,
          "postgresType": "meter_reads_types",
          "type": "UnionConstant",
        },
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "nullable": true,
          "postgresType": "date",
          "type": "Date",
        },
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "int4",
          "type": "Number",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "submittedAt",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "date",
        "type": "Date",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql reads-by-account-id.query.sql: reads-by-account-id.query.sql 1`] = `
Object {
  "params": Array [
    Object {
      "name": "id",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "comment": null,
          "postgresType": "integer",
          "type": "Number",
        },
      },
    },
    Object {
      "name": "offset",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "text",
          "type": "String",
        },
      },
    },
    Object {
      "name": "perPage",
      "type": Object {
        "nullable": true,
        "postgresType": "any",
        "type": "OptionalConstant",
        "value": Object {
          "postgresType": "text",
          "type": "String",
        },
      },
    },
  ],
  "results": Array [
    Object {
      "name": "id",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "msn",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "meterId",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "dateOn",
      "type": Object {
        "comment": null,
        "postgresType": "date",
        "type": "Date",
      },
    },
    Object {
      "name": "value",
      "type": Object {
        "comment": null,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "type",
      "type": Object {
        "comment": null,
        "items": Array [
          Object {
            "literal": "Opening",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Closing",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Quarterly",
            "postgresType": "text",
            "type": "String",
          },
          Object {
            "literal": "Meter Verification",
            "postgresType": "text",
            "type": "String",
          },
        ],
        "nullable": false,
        "postgresType": "meter_reads_types",
        "type": "UnionConstant",
      },
    },
    Object {
      "name": "reason",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "character varying",
        "type": "String",
      },
    },
    Object {
      "name": "createdAt",
      "type": Object {
        "comment": null,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "updatedAt",
      "type": Object {
        "comment": null,
        "nullable": true,
        "postgresType": "timestamp without time zone",
        "type": "Date",
      },
    },
    Object {
      "name": "sourceSystemId",
      "type": Object {
        "comment": "sql-fit: MeterReading.MeterReadingId",
        "nullable": true,
        "postgresType": "integer",
        "type": "Number",
      },
    },
    Object {
      "name": "mpan",
      "type": Object {
        "comment": null,
        "postgresType": "character varying",
        "type": "String",
      },
    },
  ],
}
`;

exports[`Load Files Should convert complex sql tariff-rates.sql: tariff-rates.sql 1`] = `
Object {
  "params": Array [],
  "results": Array [],
}
`;
